# FHP

./: .env  .gitignore  README.md  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1679769914333.mjs
.github/workflows/: rust.yml
patches/: pocketbase-react+0.1.28.patch
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: getuidwin.rs  main.rs  mylib.rs
src/components/: FloatingInput.tsx  index.ts
src/hooks/: peer.tsx
src/pages/: Login.tsx  Root.tsx  activate.tsx  home.tsx  index.ts
src/utils/: index.ts
