[package]
name = "FHP"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["macos-private-api", "shell-open", "system-tray", "window-hide", "window-show"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = { version = "0.2.140" }
sysinfo = { version = "0.28.3" }
dirs = { version = "5.0.0" }

# system_uri = { version = "0.3.0", default-features = false }
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth.git" }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
